[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "load-dotenv>=0.1.0",
    "requests>=2.31.0",
    "streamlit>=1.38.0",
    "uvicorn[standard]>=0.30.0",
]
